Amend PImpl sub-headings

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -156,7 +156,7 @@ widget::~widget() = default;
 ```
 For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
-#### const-propagation
+#### Issues with const-propagation
 Using <code>std::unique_ptr</code> to store the implementation object introduces an issue - within a `const`-qualified
  member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
@@ -164,10 +164,10 @@ The compiler is unable to give thread-compatibility guarantees for `const` objec
 
 The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`.  
 
-#### copies
+#### Issues with copies
 The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
-### An `indirect_value` implementation of the PImpl Idiom
+#### An `indirect_value` implementation of the PImpl Idiom
 Using `indirect_value` to implement the PImpl idiom ensures that the PImpl object is `const` when accessed through a `const`
 access path and that compiler-generated special member functions will behave correctly and do not need to be manually implemented.
 
