Tiny tweaks to wording: non-trivial has unintended implications

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -90,7 +90,7 @@ cannot be modified through a `const` access path.
 
 ### Hot-cold splitting
 
-When working with collections of data, CPU caches are often under utilised when algorithms access certain data-members
+When working with collections of data, CPU caches are often under-utilized when algorithms access certain data members
 much more frequently than others.  This results in some cache lines becoming busier than others, prefetchers
 preemptively caching memory which is later evicted with out being used by the CPU or memory bandwidth becoming a
 limiting factor in performance.  In such cases segregating data structures in terms of hot and cold data can remove
@@ -165,7 +165,8 @@ The compiler is unable to give thread-compatibility guarantees for `const` objec
 The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`.  
 
 #### Issues with copies
-The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
+The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be 
+required to implement copy-construction and copy-assignment [S. Meyers].
 
 #### An `indirect_value` implementation of the PImpl Idiom
 Using `indirect_value` to implement the PImpl idiom ensures that the PImpl object is `const` when accessed through a `const`
