Add change history

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -17,6 +17,16 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 # Abstract
 Add a class template, `indirect_value`, to the C++ Standard Library to support free-store-allocated objects with value-like semantics.
 
+# Change history
+
+Changes in P1950r1
+
+* Add design discussion.
+
+* Add comparison with `unique_ptr` and `polymorphic_value`.
+
+* Add node-based container and hot-cold splitting as further motivational examples.
+
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`. When a parent object contains a member of type `indirect_value<T>` and
 is accessed through a const access path,  `const`ness will propagate from the parent object to the instance of `T` owned by the `indirect_value` member.
