Code example correction

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -118,8 +118,8 @@ auto active = find(elements.begin(),
                    elements.end(), 
                    [](const auto& e) 
                    { 
-                     e.frequently_accessed_data.active();
-                   }
+                     return e.frequently_accessed_data.active();
+                   };
 ```
 
 In such cases adding a level of indirection to the larger less frequently accessed data can relieve bandwidth
@@ -138,8 +138,8 @@ auto active = find(elements.begin(),
                    elements.end(), 
                    [](const auto& e) 
                    { 
-                     e.frequently_accessed_data.active();
-                   }
+                     return e.frequently_accessed_data.active();
+                   };
 ```
 
 ### Pointer to Implementation - PImpl
