Assorted edits after Prague 2020 ISO C++ Meeting

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,10 +1,10 @@
 <pre class='metadata'>
 Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
-Shortname: P1950
-URL: wg21.link/P1950r0
-Revision: 0
+Shortname: D1950
+URL: wg21.link/D1950r1
+Revision: 1
 Audience: LEWGI
-Status: P
+Status: D
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
 !Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
@@ -18,10 +18,132 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 # Abstract
 Add a class template, `indirect_value`, to the C++ Standard Library to support free-store-allocated objects with value-like semantics.
 
-# Introduction
-The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
+# Change history
 
-## Motivation - a perfect PImpl
+Changes in P1950r1
+
+* Add design discussion.
+
+* Add comparison with `unique_ptr` and `polymorphic_value`.
+
+* Add node-based container and hot-cold splitting as further motivational examples.
+
+# Introduction
+The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`. When a parent object contains a member of type `indirect_value<T>` and
+is accessed through a const access path,  `const`ness will propagate from the parent object to the instance of `T` owned by the `indirect_value` member.
+
+## Motivation
+
+It may be desirable for a class member to be an incomplete type or for the storage used by a member object to be separate from the class itself.
+In both such cases, the member would traditionally be represented as pointer:
+
+```
+class MyClass {
+    AType data_member_;
+    AnotherType* indirect_data_member_;
+}
+```
+
+The author of such a class will need to implement special member functions as the compiler-generated special member functions will
+not function correctly (indirect data will not be copied, assigned to or deleted, only the pointer). 
+
+Special care will be needed when using the class in multithreaded environments. An instance of `MyClass` accessed through a const-access-path
+will not propagate the `const`-ness to the indirect data (only to the pointer itself) as pointers do not propagate `const` to their pointees.
+
+The class template `indirect_value` is a drop-in replacement for pointer members in cases where non-polymorphic data referenced by the 
+pointer member is logically part of the class. Use of `indirect_value` will ensure that the compiler-generated special member functions 
+behave correctly and that `const` is propagated to indirect data.
+
+### Node-based containers
+
+A tree or linked list can be implemented as a node-based container. This gives stable references to data in the nodes
+at the cost of memory indirection when accessing data. 
+
+Nodes would typically contain data and pointer(s) to other nodes so that the list or tree can be navigated:
+
+```~cpp
+class ForwardListNode {
+    int data_;
+    ForwardListNode* next_;
+}; 
+
+class ForwardList {
+    ForwardListNode* head_;
+public:
+    // ...
+};
+```
+
+The special member functions of `ForwardList` would need to be user-implemented as the compiler 
+generated versions would not copy, move or delete the nodes correctly. 
+
+Care must be taken when implementing `const`-qualified member functions as `const` will not propagate down
+from the `ForwardList` to the `ForwardListNode`s nor to the data that the nodes contain.
+
+Implementing the ForwardList and ForwardListNode with `indirect_value` corrects these issues:
+
+```~cpp
+class ForwardListNode {
+    int data_;
+    indirect_value<ForwardListNode> next_;
+}; 
+
+class ForwardList {
+    indirect_value<ForwardListNode> head_;
+public:
+    // ...
+};
+```
+
+Compiler-generated special member functions will behave correctly and do not need to be written manually.
+`const`-propagation will allow the compiler to ensure that data that is logically part of the container
+cannot be modified through a `const` access path.
+
+### Hot-cold splitting
+
+When working with collections of data, CPU caches are often under-utilized when algorithms access certain data members
+much more frequently than others.  This results in some cache lines becoming busier than others, prefetchers
+preemptively caching memory which is later evicted with out being used by the CPU or memory bandwidth becoming a
+limiting factor in performance.  In such cases segregating data structures in terms of hot and cold data can remove
+ pressure on system resources.
+
+```~cpp
+class Element {
+  SmallData frequently_accessed_data;
+  LargeData infrequently_accessed_data;
+};
+
+vector<Element> elements;
+auto active = find(elements.begin(), 
+                   elements.end(), 
+                   [](const auto& e) 
+                   { 
+                     return e.frequently_accessed_data.active();
+                   };
+```
+
+In such cases adding a level of indirection to the larger less frequently accessed data can relieve bandwidth
+ pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around `const`ness as
+usage of a raw pointer or `unique_ptr` would. Additionally, compiler-generated special member functions will behave correctly
+ and do not need to be manually implemented.
+
+```~cpp
+class Element {
+  SmallData frequently_accessed_data;
+  indirect_value<LargeData> infrequently_accessed_data;
+};
+
+vector<Element> elements;
+auto active = find(elements.begin(), 
+                   elements.end(), 
+                   [](const auto& e) 
+                   { 
+                     return e.frequently_accessed_data.active();
+                   };
+```
+
+### Pointer to Implementation - PImpl
+
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
 ```
@@ -45,25 +167,21 @@ widget::~widget() = default;
 ```
 For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
-### Issues with `unique_ptr<impl>` implementation of PImpl Idiom
-#### const-propagation
-
+#### Issues with const-propagation
 Using <code>std::unique_ptr</code> to store the implementation object introduces an issue - within a `const`-qualified
  member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
-The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` is not propagate: `const` does not mean immutable in the face of pointer-like-member data.
+The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` does not propagate: `const` does not mean immutable in the face of pointer-like-member data.
 
-The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`. 
+The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`.  
 
-#### copies
-The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
+#### Issues with copies
+The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be 
+required to implement copy-construction and copy-assignment [S. Meyers].
 
-### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
-The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
-To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
-
-### Perfect Implementation of the PImpl Idiom
-Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike `polymorphic_value`, `indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
+#### An `indirect_value` implementation of the PImpl Idiom
+Using `indirect_value` to implement the PImpl idiom ensures that the PImpl object is `const` when accessed through a `const`
+access path and that compiler-generated special member functions will behave correctly and do not need to be manually implemented.
 
 ```
 // Header file
@@ -93,12 +211,132 @@ widget& widget::operator=(const widget& rhs) = default;
 widget::~widget() = default;
 ```
 
-Now the visible class has compiler-generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.  
+## Design decisions
+
+### Should there be be an empty state?
+
+There is a design decision to be made about the default constructor
+of indirect_value. It could place indirect_value in an empty state
+with no owned object or it could default construct an owned object
+so that indirect_value is never empty.
+
+If `indirect_value<T>` is never empty then `T` must be default
+constructible for `indirect_value<T>` to be a regular type.
+The default constructor of `indirect_value<T>` would then need to allocate
+memory, which cannot be controlled by the user-supplied copier or deleter.
+
+If the default constructed state of indirect_value is non-empty then the moved from
+state should be similarly non-empty. This requires that `T` is noexcept move constructible.
+
+Allowing an empty state for `indirect_value<T>` imposes preconditions on operator* and operator->
+(similar to those of the raw pointer it may be replacing) but removes requirements on `T` and the need
+to allocate memory. 
+
+A nullable `indirect_value<T>` could be mimicked with `std::optional<indirect_value<T>>` but this is verbose,
+does not solve the problem of `T` needing to be noexcept move-constructible and would require
+partial template specialization of `std::optional` to avoid overhead that would not be incurred by a 
+nullable `indirect_value`.
+
+As designed, `indirect_value` has an empty state where it owns no object. 
+A default constructed `indirect_value` is empty and the empty state is the state of a moved-from object.
+
+
+### Is there a small object optimization?
+
+A small object optimization is permissible for `indirect_value`. 
+A small buffer that is part of the `indirect_value` class can be used to store the owned object
+if it is small. We do not require that `indirect_value` is the same size as a raw pointer; 
+implementers are free, but not required, to add a small buffer optimization as a quality of 
+implementation improvement.
+
+It would be possible for the size of the small buffer to be specified as a template argument.
+Such a design would be inconsistent with the broader Standard Library design:
+ `std::string`, `std::any`, `std::function` all permit a small object optimization but do not 
+ let users specify the size of the buffer.
+
+
+### How are allocators supported?
+
+It may be desirable for users to control the way memory is managed by an instance of a class.
+Classes such as `std::vector` and `std::string` allow an allocator to be specified as template argument
+to control memory management.
+
+Like `std::unique_ptr`, `indirect_value` allows a deleter to be provided as a template argument 
+so that disposal of the owned object can be customized. `indirect_value` also allows copying to be be 
+customized by specifying a copier, another template argument.
+
+The in-place constructor of `indirect_value<T>` uses `new` to create an instance of `T` with the supplied 
+constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and 
+`default_delete`.
+
+Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
+deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
+
 
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
-This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
+This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C
+++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this
+ topic [A. Upadyshev].  Some generic implementations of note in the wild are:
+
+<table>
+<thead>
+<tr>
+<th>Project</th>
+<th>Link</th>
+<th>Deep Copying</th>
+<th>Const Propagation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Boost Pimpl</td>
+<td>https://github.com/sean-/boost-pimpl</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>pimpl</td>
+<td>https://github.com/JonChesterfield/pimpl</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>impl_ptr</td>
+<td>https://github.com/sth/impl_ptr</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Simpl</td>
+<td>https://github.com/oliora/samples/blob/master/spimpl.h</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>smart_pimpl</td>
+<td>https://github.com/SBreezyx/smart_pimpl</td>
+<td>No</td>
+<td>No</td>
+</tr>
+<tr>
+<td>pimpl_on_stack</td>
+<td>https://github.com/kuznetsss/pimpl_on_stack/</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>deep_const_ptr</td>
+<td>https://github.com/torbjoernk/deep_const_ptr</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+</tbody>
+</table>
+
+Divergence on issues such as deep copying and const propagation along with subtleties in implementation
+mean that a single standardized solution would be of broad benefit to the community of C++ users.
 
 ## Completeness of T*
 Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete pointer types:
@@ -175,6 +413,53 @@ Recommended practice for pointer-to-implementation of PImpl classes since C++11 
 </tbody>
 </table>
 
+
+## Comparison with `unique_ptr<T>` and `polymorphic_value<T>`
+
+The class template `indirect_value<T>` is in many respects similar to `unique_ptr<T>` and the proposed 
+`polymorphic_value<T>` [J. Coe]. The table below highlights the similarities and differences:
+
+<table>
+<thead>
+<tr>
+<th>Behaviour</th>
+<th><code>indirect_value</code></th>
+<th><code>polymorphic_value</code></th>
+<th><code>unique_ptr</code></th>
+</tr>
+</thead>
+<tr>
+<td>Default constructed state</td>
+<td>Empty</td>
+<td>Empty</td>
+<td>Empty</td>
+</tr>
+<tr>
+<td>Copyable</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>Const-propagating</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+</tr>
+<tr>
+<td>Polymorphic</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Customizable memory access</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+</tr>
+</table>
+
 ## Impact on the standard
 This proposal is a pure library extension. It requires additions to be made to the standard library header `<memory>`.
 
@@ -229,7 +514,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
         indirect_value(indirect_value&& p) noexcept;
 
         template <class ...Ts>
-        indirect_value(std::in_place_t, Ts&&... ts);
+        indirect_value(std::in_place_t, Ts&&... ts);  // See below
 
         // Destructor
         ~indirect_value();
@@ -251,7 +536,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
     // indirect_value creation
     template <class T, class ...Ts> indirect_value<T>
-    make_indirect_value(Ts&& ...ts);
+    make_indirect_value(Ts&& ...ts);  // See below
 
     // indirect_value specialized algorithms
     template<class T>
@@ -288,6 +573,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
+* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ### X.Y.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
@@ -341,6 +627,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Expects: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
@@ -350,6 +637,8 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 [J. Coe] [p0201r3: A polymorphic value-type for C++](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0201r3.pdf)
 
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
+
+[C. Ericson] [Memory Optimization, Christer Ericson, Games Developers Conference, 2003](http://realtimecollisiondetection.net/pubs/GDC03_Ericson_Memory_Optimization.ppt)
 
 [A. Upadyshev] [PIMPL, Rule of Zero and Scott Meyers, Andrey Upadyshev, 2015](http://oliora.github.io/2015/12/29/pimpl-and-rule-of-zero.html)
 
