Pre-submission edits online with Ant

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,10 +1,10 @@
 <pre class='metadata'>
 Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
-Shortname: D1950
-URL: wg21.link/D1950r1
+Shortname: P1950
+URL: https://wg21.link/P1950
 Revision: 1
-Audience: LEWGI
-Status: D
+Audience: LEWG
+Status: P
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
 !Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
@@ -28,6 +28,8 @@ Changes in P1950r1
 
 * Add node-based container and hot-cold splitting as further motivational examples.
 
+* Add examples of similar classes already in use.
+
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`. When a parent object contains a member of type `indirect_value<T>` and
 is accessed through a const access path,  `const`ness will propagate from the parent object to the instance of `T` owned by the `indirect_value` member.
@@ -41,7 +43,7 @@ In both such cases, the member would traditionally be represented as pointer:
 class MyClass {
     AType data_member_;
     AnotherType* indirect_data_member_;
-}
+};
 ```
 
 The author of such a class will need to implement special member functions as the compiler-generated special member functions will
@@ -74,8 +76,8 @@ public:
 };
 ```
 
-The special member functions of `ForwardList` would need to be user-implemented as the compiler 
-generated versions would not copy, move or delete the nodes correctly. 
+The special member functions of `ForwardList` would need to be user-implemented as the 
+compiler-generated versions would not copy, move or delete the nodes correctly. 
 
 Care must be taken when implementing `const`-qualified member functions as `const` will not propagate down
 from the `ForwardList` to the `ForwardListNode`s nor to the data that the nodes contain.
@@ -103,7 +105,7 @@ cannot be modified through a `const` access path.
 
 When working with collections of data, CPU caches are often under-utilized when algorithms access certain data members
 much more frequently than others.  This results in some cache lines becoming busier than others, prefetchers
-preemptively caching memory which is later evicted with out being used by the CPU or memory bandwidth becoming a
+preemptively caching memory which is later evicted without being used by the CPU or memory bandwidth becoming a
 limiting factor in performance.  In such cases segregating data structures in terms of hot and cold data can remove
  pressure on system resources.
 
@@ -122,10 +124,8 @@ auto active = find(elements.begin(),
                    };
 ```
 
-In such cases adding a level of indirection to the larger less frequently accessed data can relieve bandwidth
- pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around `const`ness as
-usage of a raw pointer or `unique_ptr` would. Additionally, compiler-generated special member functions will behave correctly
- and do not need to be manually implemented.
+In such cases adding a level of indirection to the larger, less frequently-accessed data can relieve bandwidth
+pressure [C. Ericson].  Using `indirect_value` in this refactoring does not change guarantees around `const`ness. Compiler-generated special member functions will behave correctly and do not need to be manually implemented.
 
 ```~cpp
 class Element {
@@ -144,9 +144,12 @@ auto active = find(elements.begin(),
 
 ### Pointer to Implementation - PImpl
 
-In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
+In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the 
+Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was 
+specialised [H. Sutter].  Despite its relative maturity, using the PImpl idiom requires careful thought about copying 
+and `const`-propagation.
 
-```
+```~cpp
 // Header file
 class widget {
 public:
@@ -156,22 +159,26 @@ private:
     class impl;
     std::unique_ptr<impl> pimpl_;
 };
- 
+ ```
+
+ ```~cpp
 // Implementation file
 class widget::impl {
     // :::
 };
  
 widget::widget() : pimpl_{ std::make_unique<impl>( /*...*/  } { }
-widget::~widget() = default;
+// Destructor needs to be defined in a the same TU as `widget::impl`.
+widget::~widget() = default; 
 ```
+
 For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
 #### Issues with const-propagation
 Using <code>std::unique_ptr</code> to store the implementation object introduces an issue - within a `const`-qualified
- member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
+ member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code>-qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
-The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` does not propagate: `const` does not mean immutable in the face of pointer-like-member data.
+The compiler is unable to make thread-compatibility assumptions for `const` objects when `const` does not propagate: `const` does not mean immutable in the face of pointer-like-member data.
 
 The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`.  
 
@@ -183,7 +190,7 @@ required to implement copy-construction and copy-assignment [S. Meyers].
 Using `indirect_value` to implement the PImpl idiom ensures that the PImpl object is `const` when accessed through a `const`
 access path and that compiler-generated special member functions will behave correctly and do not need to be manually implemented.
 
-```
+```~cpp
 // Header file
 class widget {
 public:
@@ -197,13 +204,15 @@ private:
     class impl;
     std::indirect_value<impl>> pimpl;
 };
- 
+ ```
+
+ ```~cpp
 // Implementation file
 class widget::impl {
     // :::
 };
 
-// Force instantiation of the rule of zero methods in the translation unit where implementation details are known.
+// Special-member functions need to be defined in a the same TU as `widget::impl`.
 widget::widget(widget&& rhs) noexcept = default;
 widget::widget(const widget& rhs) = default;
 widget& widget::operator=(widget&& rhs) noexcept = default;
@@ -216,16 +225,16 @@ widget::~widget() = default;
 ### Should there be be an empty state?
 
 There is a design decision to be made about the default constructor
-of indirect_value. It could place indirect_value in an empty state
+of `indirect_value`. It could place `indirect_value` in an empty state
 with no owned object or it could default construct an owned object
-so that indirect_value is never empty.
+so that `indirect_value` is never empty.
 
 If `indirect_value<T>` is never empty then `T` must be default
 constructible for `indirect_value<T>` to be a regular type.
 The default constructor of `indirect_value<T>` would then need to allocate
 memory, which cannot be controlled by the user-supplied copier or deleter.
 
-If the default constructed state of indirect_value is non-empty then the moved from
+If the default constructed state of `indirect_value` is non-empty then the moved from
 state should be similarly non-empty. This requires that `T` is noexcept move constructible.
 
 Allowing an empty state for `indirect_value<T>` imposes preconditions on operator* and operator->
@@ -338,8 +347,10 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 Divergence on issues such as deep copying and const propagation along with subtleties in implementation
 mean that a single standardized solution would be of broad benefit to the community of C++ users.
 
-## Completeness of T*
-Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete pointer types:
+## Completeness of T
+Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types 
+[H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete 
+pointer types:
 
 <table>
 <thead>
