--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -116,12 +116,12 @@ class Element {
 };
 
 vector<Element> elements;
-auto active = find(elements.begin(),
-                   elements.end(),
-                   [](const auto& e)
-                   {
-                     return e.frequently_accessed_data.active();
-                   });
+auto active = find_if(elements.begin(),
+                      elements.end(),
+                      [](const auto& e)
+                      {
+                        return e.frequently_accessed_data.active();
+                      });
 ```
 
 In such cases adding a level of indirection to the larger, less frequently-accessed data can relieve bandwidth
@@ -134,12 +134,12 @@ class Element {
 };
 
 vector<Element> elements;
-auto active = find(elements.begin(),
-                   elements.end(),
-                   [](const auto& e)
-                   {
-                     return e.frequently_accessed_data.active();
-                   });
+auto active = find_if(elements.begin(),
+                      elements.end(),
+                      [](const auto& e)
+                      {
+                        return e.frequently_accessed_data.active();
+                      });
 ```
 
 ### Pointer to Implementation - PImpl
